chore: migrate to Spring Boot 4.0.6 / Java 25